# codex-maintainer-kit

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: cli-spec.md  codex-assisted-build-log.md  github-application-copy.md  openai-codex-oss-application.md  product-brief.md
examples/: codex-task-output.md  issue-input.md  pr-diff.patch  release-log.txt  visual-bug.md
src/codex_maintainer_kit/: __init__.py  cli.py  core.py  workflows.py
tests/: test_cli.py  test_core.py
