[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codex-maintainer-kit"
version = "0.1.0"
description = "Turn issues, PR diffs, and git history into Codex-ready maintainer workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Codex Maintainer Kit contributors" }]
keywords = ["codex", "open-source", "maintainer", "issue-triage", "pr-review", "release-notes", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = ["typer>=0.12", "rich>=13.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
cmtk = "codex_maintainer_kit.cli:app"
codex-maintainer-kit = "codex_maintainer_kit.cli:app"

[project.urls]
Homepage = "https://github.com/oneness1682-maker/codex-maintainer-kit"
Issues = "https://github.com/oneness1682-maker/codex-maintainer-kit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/codex_maintainer_kit"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
